# win_pass_reset

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: ARCHITECTURE.md
src/: main.py
src/app/: bootstrap.py  config.py
src/services/: admin.py  errors.py  password.py  users.py
src/ui/: controller.py  icons.py  main_window.py  styles.py  workers.py
src/ui/components/: action_bar.py  alert_label.py  form.py  message_dialog.py
src/ui/tabs/: admin_reset_tab.py  self_password_tab.py
src/ui/widgets/: eye_icon.py  password_input.py
src/utils/: platform_check.py  resources.py  validators.py
