[project]
name = "win-pass-reset"
version = "1.0.0"
description = "Windows password change tool for end users"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.8",
    "pywin32>=312",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
win-pass-reset = "src.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
